--- a/myapp/app-server/src/main/resources/templates/user/view.html
+++ b/myapp/app-server/src/main/resources/templates/user/view.html
@@ -1,32 +1,29 @@
-<%@ page
-    language="java" 
-    contentType="text/html;charset=UTF-8" 
-    pageEncoding="UTF-8"
-    trimDirectiveWhitespaces="true"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+<!DOCTYPE html>
+<html>
+<head data-th-replace="~{header :: head}"></head>
+<body>
 
-<jsp:include page="../header.jsp"/>
+<header data-th-replace="~{header :: #page-header}"></header>
 
 <h1>회원 조회</h1>
 
-<c:if test="${empty user}">
-    <p>없는 회원입니다.</p>
-</c:if>
+<div data-th-unless="${user}">
+    <p >없는 회원입니다.</p>
+</div>
 
-<c:if test="${not empty user}">
+<div data-th-if="${user}">
     <form method="post" enctype="multipart/form-data">
         <a href="https://kr.object.ncloudstorage.com/bitcamp-bucket95/user/${user.photo == null ? 'default.png' : user.photo}">
             <img src="https://d07owler4941.edge.naverncp.com/NFZ2WwiwDV/user/${user.photo == null ? 'default.png' : user.photo}?type=f&w=100&h=100">
         </a><input name="file" type="file"><br>
-        번호: <input readonly type='text' value='${user.no}'><br>
-        이름: <input name='name' type='text' value='${user.name}'><br>
-        이메일: <input name='email' type='email' value='${user.email}'><br>
+        번호: <input readonly type='text' value='100' data-th-value="${user.no}"><br>
+        이름: <input name='name' type='text' value='홍길동' data-th-value="${user.name}"><br>
+        이메일: <input name='email' type='email' value='hong@test.com' data-th-value="${user.email}"><br>
         암호: <input name='password' type='password'><br>
-        연락처: <input name='tel' type='tel' value='${user.tel}'><br>
+        연락처: <input name='tel' type='tel' value='010-1111-2222' data-th-value="${user.tel}"><br>
         <button>변경</button>
         <button type='button' onclick='deleteUser(${user.no})'>삭제</button>
     </form>
-</c:if>
 
 <script>
 function deleteUser(no) {
@@ -43,6 +40,7 @@ function deleteUser(no) {
     xhr.send();
 }
 </script>
+</div>
 
 </body>
 </html>
