--- a/myapp/app-server/src/main/resources/templates/header.html
+++ b/myapp/app-server/src/main/resources/templates/header.html
@@ -1,20 +1,13 @@
-<%@ page 
-    language="java" 
-    contentType="text/html;charset=UTF-8" 
-    pageEncoding="UTF-8"
-    trimDirectiveWhitespaces="true"%>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-
 <!DOCTYPE html>
 <html>
-<head>
+<head data-th-fragment="head">
     <meta charset='UTF-8'>
     <title>Title</title>
     <link href='/css/common.css' rel='stylesheet'>
 </head>
 <body>
 
-<header>
+<header id="page-header">
   <a href='/'><img src='/images/home.png'></a>
   <h1>프로젝트 관리 시스템</h1>
   <nav>
@@ -24,14 +17,21 @@
       <li class='btn btn-default'><a href='/board/list'>게시글</a></li>
     </ul>
   </nav>
-  <div class='login-state pos-right'>
-<c:if test="${empty loginUser}">
+  <div class='login-state pos-right'
+        data-th-if="${session.loginUser} == null">
     <a href='/auth/form' class='btn btn-primary'>로그인</a>
-</c:if>
-<c:if test="${not empty loginUser}">
-    <a href='/user/view?no=${loginUser.no}' class='btn btn-light'>${loginUser.name}</a>
+  </div>
+
+  <div class='login-state pos-right'
+        data-th-unless="${session.loginUser} == null">
+    <a class='btn btn-light'
+        data-th-href="@{/users/myInfo}"
+        href='/home.html'
+        data-th-text="${session.loginUser.name}">홍길동</a>
     <a href='/auth/logout' class='btn btn-secondary'>로그아웃</a>
-</c:if>
   </div>
 
 </header>
+
+</body>
+</html>
