--- a/myapp/app-server/src/main/resources/templates/auth/form.html
+++ b/myapp/app-server/src/main/resources/templates/auth/form.html
@@ -7,9 +7,9 @@
 
 <h1>로그인</h1>
 <form action='login' method="post">
-    이메일: <input name='email' type='email' value="${cookie.email.value}"><br>
+    이메일: <input name='email' type='email' data-th-value="${email}" value="hong@test.com"><br>
     암호: <input name='password' type='password'><br>
-    <input type="checkbox" name="saveEmail" ${empty cookie.email.value ? "" : "checked"}> 이메일 저장<br>
+    <input type="checkbox" name="saveEmail" data-th-checked="${email}"}> 이메일 저장<br>
     <input type='submit' value='로그인'>
 </form>
 
