--- a/myapp/app-server/src/main/resources/templates/user/form.html
+++ b/myapp/app-server/src/main/resources/templates/user/form.html
@@ -1,10 +1,9 @@
-<%@ page
-    language="java" 
-    contentType="text/html;charset=UTF-8" 
-    pageEncoding="UTF-8"
-    trimDirectiveWhitespaces="true"%>
+<!DOCTYPE html>
+<html>
+<head data-th-replace="~{header :: head}"></head>
+<body>
 
-<jsp:include page="../header.jsp"/>
+<header data-th-replace="~{header :: #page-header}"></header>
 
 <h1>회원 등록</h1>
 <form action="." method="post" enctype="multipart/form-data">
