--- a/myapp/app-server/src/main/resources/templates/user/view.html
+++ b/myapp/app-server/src/main/resources/templates/user/view.html
@@ -11,18 +11,20 @@
     <p >없는 회원입니다.</p>
 </div>
 
-<div data-th-if="${user}">
+<div data-th-if="${user}" data-th-object="${user}">
     <form method="post" enctype="multipart/form-data">
-        <a href="https://kr.object.ncloudstorage.com/bitcamp-bucket95/user/${user.photo == null ? 'default.png' : user.photo}">
-            <img src="https://d07owler4941.edge.naverncp.com/NFZ2WwiwDV/user/${user.photo == null ? 'default.png' : user.photo}?type=f&w=100&h=100">
+        <a data-th-href="@{https://kr.object.ncloudstorage.com/bitcamp-bucket95/user/} + *{photo == null ? 'default.png' : user.photo}"
+            href="/images/default.png">
+            <img data-th-src="@{https://d07owler4941.edge.naverncp.com/NFZ2WwiwDV/user/} + *{photo == null ? 'default.png' : user.photo} + '?type=f&w=100&h=100'"
+            src="/images/default.png">
         </a><input name="file" type="file"><br>
-        번호: <input readonly type='text' value='100' data-th-value="${user.no}"><br>
-        이름: <input name='name' type='text' value='홍길동' data-th-value="${user.name}"><br>
-        이메일: <input name='email' type='email' value='hong@test.com' data-th-value="${user.email}"><br>
+        번호: <input readonly type='text' value='100' data-th-value="*{no}"><br>
+        이름: <input name='name' type='text' value='홍길동' data-th-value="*{name}"><br>
+        이메일: <input name='email' type='email' value='hong@test.com' data-th-value="*{email}"><br>
         암호: <input name='password' type='password'><br>
-        연락처: <input name='tel' type='tel' value='010-1111-2222' data-th-value="${user.tel}"><br>
+        연락처: <input name='tel' type='tel' value='010-1111-2222' data-th-value="*{tel}"><br>
         <button>변경</button>
-        <button type='button' onclick='deleteUser(${user.no})'>삭제</button>
+        <button type='button' data-th-onclick="'deleteUser(' + ${user.no} + ')'">삭제</button>
     </form>
 
 <script>
