--- a/myapp/app-server/src/main/resources/templates/user/list.html
+++ b/myapp/app-server/src/main/resources/templates/user/list.html
@@ -16,11 +16,11 @@
     <tr data-th-each="user : ${list}">
         <td data-th-text="${user.no}">101</td>
         <td>
-            <img data-th-src="@{https://p2zqyggq4939.edge.naverncp.com/UZxHbepmRn/user/default.png(type=f,w=20,h=20)}"
+            <img data-th-src="@{https://d07owler4941.edge.naverncp.com/NFZ2WwiwDV/user/default.png(type=f,w=20,h=20)}"
                  data-th-unless="${user.photo}"
                  src="/images/default.png">
             <img data-th-if="${user.photo}"
-                 data-th-src="@{https://p2zqyggq4939.edge.naverncp.com/UZxHbepmRn/user/} + ${user.photo} + '?type=f&w=20&h=20'"
+                 data-th-src="@{https://d07owler4941.edge.naverncp.com/NFZ2WwiwDV/user/} + ${user.photo} + '?type=f&w=20&h=20'"
                  src="/images/default.png">
             <a data-th-href="@{/users/} + ${user.no}" data-th-text="${user.name}" href='view.html'>홍길동</a></td>
         <td data-th-text="${user.email}">hong@test.com</td>
