--- a/myapp/app-server/src/main/resources/templates/user/view.html
+++ b/myapp/app-server/src/main/resources/templates/user/view.html
@@ -13,10 +13,10 @@
 
 <div data-th-if="${user}" data-th-object="${user}">
     <form method="post" enctype="multipart/form-data">
-        <a data-th-href="@{https://kr.object.ncloudstorage.com/bitcamp-bucket95/user/} + *{photo == null ? 'default.png' : user.photo}"
-            href="/images/default.png">
-            <img data-th-src="@{https://d07owler4941.edge.naverncp.com/NFZ2WwiwDV/user/} + *{photo == null ? 'default.png' : user.photo} + '?type=f&w=100&h=100'"
-            src="/images/default.png">
+        <a data-th-href="@{https://kr.object.ncloudstorage.com/bitcamp-bucket95/user/} + *{photo == null ? 'default.png' : photo}"
+           href="/images/default.png">
+            <img data-th-src="@{https://d07owler4941.edge.naverncp.com/NFZ2WwiwDV/user/} + *{photo == null ? 'default.png' : photo} + '?type=f&w=100&h=100'"
+                 src="/images/default.png">
         </a><input name="file" type="file"><br>
         번호: <input readonly type='text' value='100' data-th-value="*{no}"><br>
         이름: <input name='name' type='text' value='홍길동' data-th-value="*{name}"><br>
@@ -27,21 +27,21 @@
         <button type='button' data-th-onclick="'deleteUser(' + ${user.no} + ')'">삭제</button>
     </form>
 
-<script>
-function deleteUser(no) {
-    console.log("삭제 실행!");
-    const xhr = new XMLHttpRequest();
-    xhr.open("DELETE", location.href, true);
-    xhr.onload = function () {
-        if (xhr.status === 200) {
-            location.href = "../users";
-        } else {  // 오류가 발생했을 때
-            window.alert("삭제 실패입니다!");
+    <script>
+        function deleteUser(no) {
+            console.log("삭제 실행!");
+            const xhr = new XMLHttpRequest();
+            xhr.open("DELETE", location.href, true);
+            xhr.onload = function () {
+                if (xhr.status === 200) {
+                    location.href = "../users";
+                } else {  // 오류가 발생했을 때
+                    window.alert("삭제 실패입니다!");
+                }
+            };
+            xhr.send();
         }
-    };
-    xhr.send();
-}
-</script>
+    </script>
 </div>
 
 </body>
